bk_ida/gccida/c1/hoist_code
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/hoist_code/src/gcse.c:6304:36: error: use of undeclared identifier 'machine_mode'
v22->reaching_reg = gen_reg_rtx( ( machine_mode)*( unsigned __int8 *)( insn->fld[0].rtwint + 2)); 
                                   ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/hoist_code/src/obj/gcse.o] Error 1
